[project]
name = "stata-utils"
version = "0.1.0"
description = "Utilities for cleaning pandas DataFrames for safe Stata export"
readme = "README.md"
authors = [{ name = "Paul Konietschke" }]
requires-python = ">=3.10"
dependencies = ["pandas", "numpy"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
